spaced: Add GetQuotaOverallUsage
This method takes a path and returns maps from of all uids, gids and
project ids to their current disk space usages.

Also added GetQuotaOverallUsagePrettyPrint which returns a string
representation of the maps for the ids with non-zero usage.

BUG=b:338092935
TEST=FEATURES=test emerge-brya spaced
TEST=dbus-send --system --print-reply --dest=org.chromium.Spaced
 /org/chromium/Spaced org.chromium.Spaced.GetQuotaOverallUsagePrettyPrint
 string:"/mnt/stateful_partition/"

Cq-Depend: chromium:5537149
Change-Id: I2c4d2fc7c689497cebbae0ae71be9a958dd24c7e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5569529
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Tested-by: Alexis Savery <asavery@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Commit-Queue: Alexis Savery <asavery@chromium.org>

--- a/spaced/dbus_bindings/org.chromium.Spaced.conf
+++ b/spaced/dbus_bindings/org.chromium.Spaced.conf
@@ -83,5 +83,11 @@
     <allow send_destination="org.chromium.Spaced"
            send_interface="org.chromium.Spaced"
            send_member="GetQuotaCurrentSpacesForIds"/>
+    <allow send_destination="org.chromium.Spaced"
+           send_interface="org.chromium.Spaced"
+           send_member="GetQuotaOverallUsage"/>
+    <allow send_destination="org.chromium.Spaced"
+           send_interface="org.chromium.Spaced"
+           send_member="GetQuotaOverallUsagePrettyPrint"/>
   </policy>
 </busconfig>
