--- a/spaced/BUILD.gn
+++ b/spaced/BUILD.gn
@@ -14,6 +14,7 @@ group("all") {
     ":install_headers",
     ":install_init",
     ":install_minijail_conf",
+    ":install_projects_json",
     ":libspaced-test_pc",
     ":libspaced_pc",
     ":spaced",
@@ -130,6 +131,11 @@ install_config("install_headers") {
 install_config("install_minijail_conf") {
   sources = [ "minijail/spaced.conf" ]
   install_path = "minijail_conf"
+}
+
+install_config("install_projects_json") {
+  sources = [ "projects.json" ]
+  install_path = "/etc/spaced"
 }
 
 if (use.test) {
