--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -49,6 +49,7 @@ source_set("libec_common") {
     "fingerprint/fp_context_command_factory.cc",
     "fingerprint/fp_encryption_status_command.cc",
     "fingerprint/fp_frame_command.cc",
+    "fingerprint/fp_frame_utils.cc",
     "fingerprint/fp_get_nonce_command.cc",
     "fingerprint/fp_info_command.cc",
     "fingerprint/fp_migrate_template_to_nonce_context_command.cc",
@@ -165,6 +166,7 @@ install_config("install_fingerprint_headers") {
     "fingerprint/fp_context_command_factory.h",
     "fingerprint/fp_encryption_status_command.h",
     "fingerprint/fp_frame_command.h",
+    "fingerprint/fp_frame_utils.h",
     "fingerprint/fp_get_nonce_command.h",
     "fingerprint/fp_info_command.h",
     "fingerprint/fp_migrate_template_to_nonce_context_command.h",
@@ -229,6 +231,7 @@ if (use.test) {
       "fingerprint/fp_context_command_test.cc",
       "fingerprint/fp_encryption_status_command_test.cc",
       "fingerprint/fp_frame_command_test.cc",
+      "fingerprint/fp_frame_utils_test.cc",
       "fingerprint/fp_get_nonce_command_test.cc",
       "fingerprint/fp_info_command_test.cc",
       "fingerprint/fp_migrate_template_to_nonce_context_command_test.cc",
