patchpanel: add DownstreamNetworkService unit tests
This patch adds some unit test coverage for DownstreamNetworkService.

BUG=b:336883268
TEST=FEATURES=test emerge-$BOARD patchpanel.

Change-Id: Ia7d51ae1283a400b4cd824e65267d48b40763d61
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5581410
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Tested-by: Hugo Benichi <hugobenichi@google.com>
Reviewed-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -329,9 +329,13 @@ if (use.test) {
       "minijailed_process_runner_test.cc",
       "mock_connmark_updater.cc",
       "mock_conntrack_monitor.cc",
+      "mock_counters_service.cc",
       "mock_datapath.cc",
+      "mock_guest_ipv6_service.cc",
+      "mock_lifeline_fd_service.cc",
       "mock_multicast_counters_service.cc",
       "mock_process_runner.cc",
+      "mock_rtnl_client.cc",
       "mock_vm_concierge_client.cc",
       "multicast_counters_service_test.cc",
       "multicast_metrics_test.cc",
