shill: copy url/mojom/url.mojom from Chromium
Originally we duplicate the URL Mojo struct at portal.mojom. However, it
increases the maintenance burden to duplicate the URL struct when
copying back the portal.mojom API back to Chromium.

This CL copies the url/mojom/url.mojom from Chromium project, and makes
the portal Mojo API use url.mojom.Url directly. In order to keep the
mojo include path the same as Chromium, this CL changes the mojo_root to
platform2/shill/mojom, then moves the url mojom file to
platform2/shill/mojom/url/mojom/url.mojom.

BUG=b:340406014
TEST=FEATURES=test emerge-brya shill

Change-Id: I05aab7ee90317a8545df44e33ac4f80265e05d8d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5569013
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/mojom/type_mappings.json
+++ b/shill/mojom/type_mappings.json
@@ -1,9 +1,10 @@
 {
   "c++": {
-    "chromeos.connectivity.mojom.URL": {
+    "url.mojom.Url": {
       "copyable_pass_by_value": false,
       "default_constructible": true,
       "force_serialize": false,
+      "forward_declaration": null,
       "hashable": false,
       "move_only": false,
       "nullable_is_same_type": true,
@@ -12,7 +13,7 @@
         "net-base/http_url.h"
       ],
       "traits_headers": [
-        "shill/mojom/url_mojom_traits.h"
+        "shill/mojom/url/mojom/url_mojom_traits.h"
       ],
       "typename": "::net_base::HttpUrl"
     }
