--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -239,18 +239,6 @@ generate_dbus_proxies("generate_bluetooth_proxies") {
   ]
 }
 
-generate_mojom_bindings("mojo_bindings") {
-  mojo_root = "${platform2_root}"
-  sources = [
-    "mojom/passpoint.mojom",
-    "mojom/portal.mojom",
-  ]
-  mojo_extra_args = [
-    "--typemap",
-    rebase_path("mojom/type_mappings.json"),
-  ]
-}
-
 install_config("mojo_policy") {
   sources = [ "mojom/shill_mojo.json" ]
   install_path = "/etc/mojo/service_manager/policy"
@@ -451,8 +439,8 @@ static_library("libshill") {
     ":generate_supplicant_proxies",
     ":generate_upstart_proxies",
     ":mobile_operator_db",
-    ":mojo_bindings",
     ":shill-chromeos-dbus-adaptors",
+    "//shill/mojom",
   ]
   pkg_deps = [ "libstructuredmetrics" ]
 
