vm_tools: concierge: Don't fail on 32-bit systems.
They don't run ARCVM and don't need it but right now minijail is failing
to start.

BUG=b:237618542
BUG=b:327117904
BUG=b:342116124
TEST=cros_sdk tast run $DUT vm.StopAllSlimRootfsVMs vm.ListSlimRootfsVM
TEST=start vm_concierge  # with some more verbose logging
  # Observe minijail fails to start on concierge start up.

Change-Id: Ia5ea608489534617608450f39a7190df5e5ea18b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5568398
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Reviewed-by: Satoshi Niwa <niwa@chromium.org>
Tested-by: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Junichi Uekawa <uekawa@chromium.org>
Commit-Queue: Satoshi Niwa <niwa@chromium.org>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -136,8 +136,12 @@ script
 
   # Bind mounts under /run/arcvm/ro, the read-only shared directory.
   # (go/arcvm-shared-dirs)
-  set -- "$@" -b /lib64,/run/arcvm/ro/lib64
-  set -- "$@" -b /usr/lib64,/run/arcvm/ro/usr/lib64
+  if [ -d "/lib64" ]; then
+    # There's 32 bit systems that don't run ARCVM, don't error out if those
+    # directories don't exist.
+    set -- "$@" -b /lib64,/run/arcvm/ro/lib64
+    set -- "$@" -b /usr/lib64,/run/arcvm/ro/usr/lib64
+  fi
   set -- "$@" -b /usr/share/fonts,/run/arcvm/ro/fonts
   if [ -f "/usr/bin/vshd" ]; then
     set -- "$@" -b /usr/bin/vshd,/run/arcvm/ro/usr/bin/vshd
