vm_tools: Bind mount /sbin/ureadahead into /run/arcvm/ro/sbin/
... so ureadahead binary is shared with the guest

BUG=b:327117904
BUG=b:237618542
TEST=adb shell ls /var/run/arc/ro/sbin/ureadahead

Change-Id: I9f7d625e1fef75a523c67b933576d8b247694b61
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5580097
Reviewed-by: Kazuhiro Inaba <kinaba@chromium.org>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Auto-Submit: Satoshi Niwa <niwa@chromium.org>
Tested-by: Satoshi Niwa <niwa@chromium.org>
Commit-Queue: Satoshi Niwa <niwa@chromium.org>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -146,6 +146,9 @@ script
   if [ -f "/usr/bin/vshd" ]; then
     set -- "$@" -b /usr/bin/vshd,/run/arcvm/ro/usr/bin/vshd
   fi
+  if [ -f "/sbin/ureadahead" ]; then
+    set -- "$@" -b /sbin/ureadahead,/run/arcvm/ro/sbin/ureadahead
+  fi
   if [ -d "/run/arcvm/jemalloc" ]; then
     set -- "$@" -b /run/arcvm/jemalloc,/run/arcvm/ro/jemalloc
   fi
