vm_tools: Consolidate dev_mode bind mounts.
BUG=None
TEST=cq

Change-Id: I716d415264aeda0bb401805cb9fd088e8ec7b4a7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5579440
Commit-Queue: Junichi Uekawa <uekawa@chromium.org>
Tested-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Satoshi Niwa <niwa@chromium.org>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -152,6 +152,13 @@ script
   if [ -d "/run/arcvm/jemalloc" ]; then
     set -- "$@" -b /run/arcvm/jemalloc,/run/arcvm/ro/jemalloc
   fi
+
+  # For vmm-swap feature.
+  if [ -c "/dev/userfaultfd" ]; then
+    set -- "$@" -b /dev/userfaultfd
+  fi
+
+  # Handle dev-mode only bind mounts.
   if [ -f "/run/vm/dev_mode" ]; then
     if [ -d "/usr/local/lib64" ]; then
       set -- "$@" -b /usr/local/lib64,/run/arcvm/ro/usr/local/lib64
@@ -162,15 +169,7 @@ script
     if [ -f "/usr/local/bin/trace-cmd" ]; then
       set -- "$@" -b /usr/local/bin/trace-cmd,/run/arcvm/ro/usr/local/bin/trace-cmd
     fi
-  fi
 
-  # For vmm-swap feature.
-  if [ -e "/dev/userfaultfd" ]; then
-    set -- "$@" -b /dev/userfaultfd
-  fi
-
-  # Handle dev-mode only bind mounts.
-  if [ -f "/run/vm/dev_mode" ]; then
     if [ -d "/opt/google/vms/android" ]; then
       set -- "$@" -b /opt/google/vms/android,,1
     fi
