vm_tools: concierge: Fold non-optional minijail option.
The options for go/host-assisted-vm-swap (google-only) are not optionally set,
and don't need to be in "$@"

BUG=b:236210703
TEST=cq

Change-Id: I570c98617cb4c2b03415bad47de92ddcf1cf62ac
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5579441
Tested-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>
Commit-Queue: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Alexandre Marciano Gimenez <raging@google.com>

--- a/vm_tools/init/vm_concierge.conf
+++ b/vm_tools/init/vm_concierge.conf
@@ -216,9 +216,6 @@ script
     done
   fi
 
-  # Unlimited MEMLOCK in support of go/host-assisted-vm-swap
-  set -- "$@" -R RLIMIT_MEMLOCK,unlimited,unlimited
-
   # Only mount shadercached daemon-store if it exists
   if [ -d /run/daemon-store/shadercached ]; then
     set -- "$@" -k "/run/daemon-store/shadercached,\
@@ -308,6 +305,7 @@ script
      -k '/run/arcvm,/run/arcvm,none,MS_BIND|MS_REC' \
      -b '/var/lib/metrics/structured,,1' \
      -b '/var/lib/metrics/structured/events,,1' \
+     -R RLIMIT_MEMLOCK,unlimited,unlimited \
      "$@" \
      -- /sbin/minijail0 -U -pv -I -i \
      -Kslave \
