permission_broker: allow reading /etc/group.
The broker needs to be able to translate group IDs
into group names.

Also add some error logging when it cannot.

BUG=b:342635403
TEST=ran on DUT, verified behavior for /dev/ttyUSB*.

Change-Id: Id20e728aef5d7d27e60b5b1605b6f88cb778e45e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5580978
Tested-by: Luigi Semenzato <semenzato@chromium.org>
Commit-Queue: Luigi Semenzato <semenzato@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>

--- a/permission_broker/minijail/permission_broker.conf
+++ b/permission_broker/minijail/permission_broker.conf
@@ -11,6 +11,7 @@ ambient
 fs-default-paths
 fs-path-ro = /proc
 fs-path-rw = /dev
+fs-path-ro = /etc/group
 fs-path-ro = /run/chromeos-config/v1
 fs-path-rw = /run/dbus
 fs-path-rw = /run/udev
