update_engine: Fuzzer pkg config update
... fuzzer instances are missing libbrillo.

BUG=b:343298737
TEST=CQ

Change-Id: I6cfb04c55608cfc1a7da89384dafc63f52a12606
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5582118
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Auto-Submit: Jae Hoon Kim <kimjae@chromium.org>

--- a/update_engine/BUILD.gn
+++ b/update_engine/BUILD.gn
@@ -625,15 +625,18 @@ if (use.test) {
 
 # Fuzzer target.
 if (use.fuzzer) {
+  pkg_config("fuzzer_config") {
+    pkg_deps = [
+      "libbrillo-test",
+      "libchrome-test",
+    ]
+  }
   executable("update_engine_delta_performer_fuzzer") {
     sources = [ "payload_consumer/delta_performer_fuzzer.cc" ]
     configs += [
       "//common-mk/common_fuzzer",
+      ":fuzzer_config",
       ":target_defaults",
-    ]
-    pkg_deps = [
-      "libbrillo-test",
-      "libchrome-test",
     ]
     deps = [
       ":libupdate_engine",
@@ -644,11 +647,8 @@ if (use.fuzzer) {
     sources = [ "cros/omaha_request_action_fuzzer.cc" ]
     configs += [
       "//common-mk/common_fuzzer",
+      ":fuzzer_config",
       ":target_defaults",
-    ]
-    pkg_deps = [
-      "libbrillo-test",
-      "libchrome-test",
     ]
     deps = [
       ":libupdate_engine",
