--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -334,6 +334,7 @@ static_library("libshill") {
     "network/compound_network_config.cc",
     "network/connection_diagnostics.cc",
     "network/dhcp_client_proxy.cc",
+    "network/dhcp_controller.cc",
     "network/dhcp_provider.cc",
     "network/dhcpv4_config.cc",
     "network/icmp_session.cc",
@@ -790,6 +791,7 @@ if (use.test) {
       "network/capport_proxy_test.cc",
       "network/compound_network_config_test.cc",
       "network/connection_diagnostics_test.cc",
+      "network/dhcp_controller_test.cc",
       "network/dhcp_provider_test.cc",
       "network/dhcpv4_config_test.cc",
       "network/icmp_session_test.cc",
@@ -799,6 +801,7 @@ if (use.test) {
       "network/mock_capport_proxy.cc",
       "network/mock_connection_diagnostics.cc",
       "network/mock_dhcp_client_proxy.cc",
+      "network/mock_dhcp_controller.cc",
       "network/mock_dhcp_provider.cc",
       "network/mock_dhcp_proxy.cc",
       "network/mock_icmp_session.cc",
