camera: Allow reading OpenVINO config directory
It's needed for delegating the VC effects ML workload to Intel NPU.

BUG=b:343626256
TEST=Deploy the cros-camera.conf and test VC effects on NPU manually

Change-Id: I2197f89e82e9238d14009eb8a877a611ef368365
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5587825
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Commit-Queue: Shik Chen <shik@chromium.org>
Auto-Submit: Shik Chen <shik@chromium.org>
Tested-by: Shik Chen <shik@chromium.org>

--- a/camera/hal_adapter/init/cros-camera.conf
+++ b/camera/hal_adapter/init/cros-camera.conf
@@ -76,33 +76,44 @@ post-stop script
   fi
 end script
 
-# Need -G to be in video group to access /dev/video*.
-# Need access to original network namespace for udev (no -e), which passes
-# uevents via netlink socket.
-# Write PID to /sys/fs/cgroup/cpuset/user_space/media/tasks.
-# Need access to /proc, /sys, /dev to perform USB enumeration.
-# Need access to /var/cache/camera to read camera parameters.
-# Need access to /var/lib/timezone to read correct timezone.
-# Need access to /var/lib/ml_core/opencl_cache to read effects opencl cache.
-# Need read access to /run/chromeos-config/v1 for access to chromeos-config.
-# Need (executable) access to /run/imageloader to read DLC.
-# Need (writable) access to /dev/shm to share memory with Android.
-# Need (writable) access to /var/lib/metrics to log metrics.
-# Need (writable) access to /run/dbus for DBus communications.
-# Set RLIMIT_NICE(=13) to 40,40
-exec minijail0 -i -u arc-camera -g arc-camera -G \
-    -N -p -r -l -t \
-    -f /sys/fs/cgroup/cpuset/user_space/media/tasks \
-    -v -P /mnt/empty -b / -b /proc -b /sys -b /dev \
-    -k 'tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' -b /var/cache/camera \
-    -b /var/lib/timezone -b /dev/shm,,1 \
-    -b /var/lib/ml_core/opencl_cache \
-    -k 'tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' \
-    -k '/run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV' \
-    -b /run/perfetto,,1 -b /run/camera,,1 -b "${SERVER_TOKEN_DIR}" \
-    -b /run/udev/data -b /run/chromeos-config/v1 \
-    -b "${CAMERA_LIBFS_PATH}" \
-    -b /var/lib/metrics,,1 -b /run/dbus/ -b /run/mojo,,1 \
-    -R 13,40,40 \
-    -n -S "${SECCOMP_POLICY_FILE}" \
-    -- /usr/bin/cros_camera_service
+script
+  # Need -G to be in video group to access /dev/video*.
+  # Need access to original network namespace for udev (no -e), which passes
+  # uevents via netlink socket.
+  # Write PID to /sys/fs/cgroup/cpuset/user_space/media/tasks.
+  # Need access to /proc, /sys, /dev to perform USB enumeration.
+  # Need access to /var/cache/camera to read camera parameters.
+  # Need access to /var/lib/timezone to read correct timezone.
+  # Need access to /var/lib/ml_core/opencl_cache to read effects opencl cache.
+  # Need read access to /run/chromeos-config/v1 for access to chromeos-config.
+  # Need (executable) access to /run/imageloader to read DLC.
+  # Need (writable) access to /dev/shm to share memory with Android.
+  # Need (writable) access to /var/lib/metrics to log metrics.
+  # Need (writable) access to /run/dbus for DBus communications.
+  # Set RLIMIT_NICE(=13) to 40,40
+
+  # Need access to /etc/openvino to read OpenVINO config file for Intel NPU.
+  # The path only exists on NPU-enabled devices, so we mount it conditionally.
+  NPU_ARGS=''
+  if [ -d /etc/openvino ]; then
+    NPU_ARGS='-b /etc/openvino'
+  fi
+
+  exec minijail0 -i -u arc-camera -g arc-camera -G \
+      -N -p -r -l -t \
+      -f /sys/fs/cgroup/cpuset/user_space/media/tasks \
+      -v -P /mnt/empty -b / -b /proc -b /sys -b /dev \
+      -k 'tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' -b /var/cache/camera \
+      -b /var/lib/timezone -b /dev/shm,,1 \
+      -b /var/lib/ml_core/opencl_cache \
+      ${NPU_ARGS} \
+      -k 'tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' \
+      -k '/run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV' \
+      -b /run/perfetto,,1 -b /run/camera,,1 -b "${SERVER_TOKEN_DIR}" \
+      -b /run/udev/data -b /run/chromeos-config/v1 \
+      -b "${CAMERA_LIBFS_PATH}" \
+      -b /var/lib/metrics,,1 -b /run/dbus/ -b /run/mojo,,1 \
+      -R 13,40,40 \
+      -n -S "${SECCOMP_POLICY_FILE}" \
+      -- /usr/bin/cros_camera_service
+end script
