shill: Adapt to dhcpcd7 file name change
As a preparation for co-existance of dhcpcd7 and dhcpcd10.

BUG=b:344500617
TEST=unit
TEST=tast run $(DUT) network.DHCP*

Cq-Depend: chromium:5588222
Cq-Depend: chromium:5588101
Change-Id: I32b3e235adc899eca3ea24c781ad7d74f41c057b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5594830
Reviewed-by: Allen Webb <allenwebb@google.com>
Tested-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>

--- a/shill/tmpfiles.d/dhcpcd.conf
+++ b/shill/tmpfiles.d/dhcpcd.conf
@@ -7,5 +7,8 @@
 # Set up dhcpcd's {/var/lib|/run} dirs to run as user 'dhcp'.
 d= /run/dhcpcd 0755 dhcp dhcp
 d= /var/lib/dhcpcd 0775 dhcp dhcp
+d= /run/dhcpcd7 0755 dhcp dhcp
+d= /var/lib/dhcpcd7 0775 dhcp dhcp
 # Like 'chown -R' and 'chmod -R' but doesn't follow symlinks.
 Z /var/lib/dhcpcd/* 0664 dhcp dhcp
+Z /var/lib/dhcpcd7/* 0664 dhcp dhcp
