metrics: Rename key.proto to metrics_key.proto
This is a workaround to fix the fuzzer issue. Currently some fuzzers may
fail when there are two proto files having the same filename. See $BUG
for details.

BUG=b:336210343
TEST=CQ
TEST=Verified that openvpn_management_server_fuzzer can run now.

Cq-Depend: chromium:5740728
Change-Id: Iaec3c3ed1ca5dd0578dbe296c36e644df0415e1d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5595793
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Jong Ahn <jongahn@chromium.org>

--- a/metrics/structured/BUILD.gn
+++ b/metrics/structured/BUILD.gn
@@ -29,7 +29,7 @@ proto_library("storage") {
 proto_library("libsm_proto") {
   proto_in_dir = "lib/proto"
   proto_out_dir = "include/metrics/structured/lib/proto"
-  sources = [ "${proto_in_dir}/key.proto" ]
+  sources = [ "${proto_in_dir}/metrics_key.proto" ]
   use_pic = true
 }
 
