camera: add StartKioskVisionDetection to CrosCameraService mojom
When `StartKioskVisionDetection` is called, the `CameraHalAdapter`
sets the kiosk config to `StreamManipulator::RuntimeOptions`. We
bind the observer inside `RuntimeOptions::SetKioskVisionConfig`
to make sure that the observer will be available when we reopen
the camera device.

This CL also adds almost empty KioskVisionStreamManipulator.

BUG=b:339398231
TEST=KioskVisionStreamManipulatorTest.*

Change-Id: I2530c88405c336918e3bee5f07550bae1e2c9090
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5604242
Reviewed-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Nancy Zhao <zhaon@google.com>
Tested-by: Irina Fedorova <irfedorova@google.com>
Commit-Queue: Irina Fedorova <irfedorova@google.com>
Reviewed-by: Mike Frysinger <vapier@chromium.org>
Reviewed-by: Sergii Bykov <sbykov@google.com>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -57,6 +57,10 @@ group("all") {
       ":feature_profile_test",
       ":zsl_helper_test",
     ]
+
+    if (use.camera_feature_kiosk_vision) {
+      deps += [ ":cros_kiosk_vision_sm_tests" ]
+    }
   }
 
   if (use.fuzzer) {
@@ -339,6 +343,9 @@ source_set("stream_manipulator") {
       "//camera/features/hdrnet",
     ]
   }
+  if (use.camera_feature_kiosk_vision) {
+    deps += [ "//camera/features/kiosk_vision" ]
+  }
   if (use.camera_feature_portrait_mode) {
     deps += [ "//camera/features/portrait_mode" ]
   }
@@ -546,6 +553,26 @@ if (use.test) {
       "libdrm",
     ]
     deps = [ "//camera/common:base" ]
+  }
+
+  if (use.camera_feature_kiosk_vision) {
+    executable("cros_kiosk_vision_sm_tests") {
+      sources = [
+        "//camera/features/kiosk_vision/kiosk_vision_stream_manipulator.cc",
+        "//camera/features/kiosk_vision/tests/kiosk_vision_stream_manipulator_test.cc",
+      ]
+      configs += [
+        "//common-mk:test",
+        "//camera/features/kiosk_vision:target_defaults",
+      ]
+      run_test = true
+      deps = [
+        "//camera/common:base",
+        "//camera/common:libcros_camera",
+        "//camera/common:libcros_camera_mojom",
+        "//common-mk/testrunner:testrunner",
+      ]
+    }
   }
 
   executable("feature_profile_test") {
