--- a/camera/features/kiosk_vision/tests/BUILD.gn
+++ b/camera/features/kiosk_vision/tests/BUILD.gn
@@ -5,7 +5,13 @@
 import("//common-mk/pkg_config.gni")
 
 group("all") {
-  deps = [ ":kiosk_vision_wrapper_test" ]
+  deps = []
+  if (use.test) {
+    deps += [
+      ":cros_kiosk_vision_sm_tests",
+      ":kiosk_vision_wrapper_test",
+    ]
+  }
 }
 
 pkg_config("target_defaults") {
@@ -13,7 +19,10 @@ pkg_config("target_defaults") {
     "//camera/build:cros_camera_common",
     "//common-mk:test",
   ]
-  pkg_deps = [ "libchrome-test" ]
+  pkg_deps = [
+    "libchrome-test",
+    "libsession_manager-client",
+  ]
 }
 
 executable("kiosk_vision_wrapper_test") {
