debugd: Grant chronos permission for method GenerateFirmwareDump
The D-Bus method GenerateFirmwareDump will be used by crosh. Grant its
permission to chronos so that crosh can make this call.

BUG=b:333115465
TEST=See next CL http://crrev/c/5598044

Change-Id: I5b06724c8eb0c2bbd9994f21121aaa74a40e9827
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5598043
Reviewed-by: Aashay Shringarpure <aashay@google.com>
Reviewed-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Yichen Yu <yichenyu@chromium.org>
Tested-by: Yichen Yu <yichenyu@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>

--- a/debugd/share/org.chromium.debugd.conf
+++ b/debugd/share/org.chromium.debugd.conf
@@ -94,6 +94,9 @@
     <allow send_destination="org.chromium.debugd"
            send_interface="org.chromium.debugd"
            send_member="GetFeedbackBinaryLogs" />
+    <allow send_destination="org.chromium.debugd"
+           send_interface="org.chromium.debugd"
+           send_member="GenerateFirmwareDump" />
   </policy>
 
   <policy user="runtime_probe">
