missive: missive_testing_tool available on test image
Making missive_testing_tool available on test images so that the tool can be used without it having to be copied/pasted to the DUT, this also makes it possible to use on the tast tests.

BUG=b:345309534
TEST=cros_sdk cros_workon_make --board=${BOARD} missive --test
TEST=deployed missive locally and enqueued an event with success without having to copy the executable

Change-Id: Ia433afbd143c0d61d49c198c77d309c022edf28d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5601077
Auto-Submit: Alberto Juarez <albertojuarez@google.com>
Tested-by: Alberto Juarez <albertojuarez@google.com>
Reviewed-by: Leonid Baraz <lbaraz@chromium.org>
Commit-Queue: Leonid Baraz <lbaraz@chromium.org>

--- a/missive/BUILD.gn
+++ b/missive/BUILD.gn
@@ -8,15 +8,13 @@ import("//common-mk/proto_library.gni")
 group("all") {
   deps = [
     ":libmissiveclient_pc",
+    ":missive_testing_tool",
     ":missiveclientlib",
     ":missiveclienttestlib",
     ":missived",
   ]
   if (use.test) {
-    deps += [
-      ":missive_testing_tool",
-      ":missived_testrunner",
-    ]
+    deps += [ ":missived_testrunner" ]
   }
 }
 
@@ -168,6 +166,18 @@ static_library("missiveclienttestlib") {
   ]
 }
 
+executable("missive_testing_tool") {
+  sources = [ "testing_tool.cc" ]
+  configs += [ ":target_defaults" ]
+  deps = [
+    ":missiveclientlib",
+    "//missive/analytics:libanalytics",
+  ]
+
+  # Installed to /usr/local/bin since it's on test/dev images only.
+  install_path = "/usr/local/bin"
+}
+
 if (use.test) {
   pkg_config("target_test") {
     pkg_deps = [
@@ -257,15 +267,6 @@ if (use.test) {
       "//missive/util:status",
       "//missive/util:test_callbacks_support",
       "//missive/util:time",
-    ]
-  }
-
-  executable("missive_testing_tool") {
-    sources = [ "testing_tool.cc" ]
-    configs += [ ":target_defaults" ]
-    deps = [
-      ":missiveclientlib",
-      "//missive/analytics:libanalytics",
     ]
   }
 }
