init: startup: split MountImpl
Enhance mount helper generator class by returning the right backend to
mount /var and /home.
This way we can simplify MountVarHomeInterface to only mount/unmount
calls and split mount_var_home_impl.cc in two.
Compile the encrypted backend only when USE_ENCRYPTED_STATEFUL is set.
Do not assume we can set the flag |encstateful| unless
USE_ENCRYPTED_STATEFUL is set. In doubt, use a mock interface to the
mount backend.

BUG=b:172221451
TEST=Unit test on brya, amd64-generic, brya.
     Unit test with USE="-encrypted_stateful". CQ.

Change-Id: Ic0c3351afacfeffffed4584548bec7b4dc0fb0a1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5612658
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Alexis Savery <asavery@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -105,7 +105,7 @@ static_library("libcrosstartup") {
     "startup/flags.h",
     "startup/mount_helper.cc",
     "startup/mount_helper_factory.cc",
-    "startup/mount_var_home_impl.cc",
+    "startup/mount_var_home_unencrypted_impl.cc",
     "startup/security_manager.cc",
     "startup/standard_mount_helper.cc",
     "startup/startup_dep_impl.cc",
@@ -113,6 +113,9 @@ static_library("libcrosstartup") {
     "startup/test_mode_mount_helper.cc",
     "startup/uefi_startup.cc",
   ]
+  if (use.encrypted_stateful) {
+    sources += [ "startup/mount_var_home_encrypted_impl.cc" ]
+  }
   configs += [ ":target_defaults" ]
   defines = []
   deps = [
