--- a/diagnostics/cros_healthd/routines/sensor/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/sensor/BUILD.gn
@@ -4,7 +4,7 @@
 
 source_set("sensor") {
   sources = [
-    "sensitive_sensor_v2.cc",
+    "sensitive_sensor.cc",
     "sensor_detail.cc",
     "sensor_existence_checker.cc",
   ]
@@ -26,7 +26,7 @@ source_set("sensor") {
 if (use.test) {
   source_set("sensor_test") {
     sources = [
-      "sensitive_sensor_v2_test.cc",
+      "sensitive_sensor_test.cc",
       "sensor_detail_test.cc",
       "sensor_existence_checker_test.cc",
     ]
