vm_tools: Clean up 8 shared-dir configs
(1) Clean up shared-dir configs for:
  /lib64, /usr/lib64, /usr/local/lib64,
  /sbin, /usr/bin, /usr/local/bin,
  /usr/share/fonts, /run/arcvm/jemalloc

These dirs are bind-mounted into /run/arcvm/ro/* after crrev/c/5528341,
and we have switched ARCVM-R,T,V to using /run/arcvm/ro/*

(2) In this CL, we also switch concierge to create je_malloc.conf
  under /run/arcvm/ro/jemalloc/ instead of /run/arcvm/jemalloc/

Design doc: go/arcvm-shared-dirs

BUG=b:237618542
TEST=tast run DUT arc.FontSharing
TEST=tast run DUT arc.UreadaheadGuestCompat.vm
TEST=jemalloc config is loaded

Change-Id: Ifc7f1c07105ee29435f016b9e6d75c76689e5408
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5619917
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: Satoshi Niwa <niwa@chromium.org>
Tested-by: Satoshi Niwa <niwa@chromium.org>
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>

--- a/vm_tools/tmpfiles.d/arcvm.conf
+++ b/vm_tools/tmpfiles.d/arcvm.conf
@@ -12,9 +12,9 @@ d= /run/arcvm/android-data/mount 0770 crosvm 655360
 # Create the directory mounted as /var/run/arc/testharness.
 # ugid 656360:656360 maps to system:system on the Android side.
 d= /run/arcvm/testharness 0770 656360 656360
-# Create the directory mounted as /var/run/arc/jemalloc.
-# TODO(b/237618542): Remove this after migrating this to /run/arcvm/ro/jemalloc
-d= /run/arcvm/jemalloc 0775 crosvm crosvm
+# Create the directory mounted as /var/run/arc/ro/jemalloc.
+d= /run/arcvm/ro 0775 crosvm crosvm
+d= /run/arcvm/ro/jemalloc 0775 crosvm crosvm
 
 # Create directories for APK Cache. APK cache is located at
 # /var/run/arc/apkcache on guest side.
