vm_tools: Disable pvclock for x86_64
As pvclock seems to be the culprit for b/342168920, disable it in the
meantime.

This is a revert of f46bbac797e ("vm_tools: concierge: Append --pvclock
crosvm arg on x86 ARCVM") but in a separate commit since the change
doesn't revert cleanly anymore.

BUG=b:295256641,b:346249019
TEST=tast run arc.Suspend.s10c2

Cq-Depend: 5624354
Change-Id: I57e7a13445025a2fe9021fca956aa97663ee1dfd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5622438
Commit-Queue: Tatsuyuki Ishi <ishitatsuyuki@google.com>
Tested-by: Tatsuyuki Ishi <ishitatsuyuki@google.com>
Reviewed-by: Suleiman Souhlal <suleiman@google.com>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>
Reviewed-by: Keiichi Watanabe <keiichiw@chromium.org>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -112,8 +112,8 @@ static_library("libconcierge") {
     "USE_PCI_HOTPLUG_SLOTS=${use.amd64}",
 
     # TODO(b/295256641): Re-enable pvclock support for aarch64.
-    # Currently pvclock is only enabled on x86_64 architecture.
-    "USE_VIRTIO_PVCLOCK=${use.amd64}",
+    # TODO(b/342168920): Re-enable pvclock support for x86_64.
+    "USE_VIRTIO_PVCLOCK=0",
   ]
 
   cflags_cc = [
