heartd: Collect Intel PMT data periodically
BUG=b:289023919
TEST=0. Build libpmt first
     1. Deploy to DUT
     2. Check /var/lib/heartd/intel_pmt/
     3. Check the outdated logs are removed when time goes on
TEST=FEATURES=test emerge-rex chromeos-base/heartd

Cq-Depend: chromium:5706929
Cq-Depend: chromium:5611257
Cq-Depend: chromium:5787881
Change-Id: I0489ad3953e5205b394476051e7acafc73f1ba7b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5632616
Commit-Queue: Kerker Yang <kerker@chromium.org>
Tested-by: Kerker Yang <kerker@chromium.org>
Reviewed-by: Stanisław Kardach <skardach@google.com>
Reviewed-by: Denny Huang <dennyh@google.com>

--- a/heartd/daemon/BUILD.gn
+++ b/heartd/daemon/BUILD.gn
@@ -9,6 +9,7 @@ pkg_config("target_defaults") {
     "libbrillo",
     "libpower_manager-client",
     "mojo_service_manager",
+    "protobuf",
     "sqlite3",
   ]
 }
