--- a/camera/hal_adapter/init/cros-camera.conf
+++ b/camera/hal_adapter/init/cros-camera.conf
@@ -99,6 +99,13 @@ script
     NPU_ARGS='-b /etc/openvino'
   fi
 
+  # Need access to /etc/tflite to read stable delegate settings file. The path
+  # only exists on accelerator-enabled devices, so we mount it conditionally.
+  TFLITE_ARGS=''
+  if [ -d /etc/tflite ]; then
+    TFLITE_ARGS='-b /etc/tflite'
+  fi
+
   exec minijail0 -i -u arc-camera -g arc-camera -G \
       -N -p -r -l -t \
       -f /sys/fs/cgroup/cpuset/user_space/media/tasks \
@@ -107,6 +114,7 @@ script
       -b /var/lib/timezone -b /dev/shm,,1 \
       -b /var/lib/ml_core/opencl_cache \
       ${NPU_ARGS} \
+      ${TFLITE_ARGS} \
       -k 'tmpfs,/run,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC' \
       -k '/run/imageloader,/run/imageloader,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV' \
       -b /run/perfetto,,1 -b /run/camera,,1 -b "${SERVER_TOKEN_DIR}" \
