--- a/net-base/BUILD.gn
+++ b/net-base/BUILD.gn
@@ -8,6 +8,8 @@ group("all") {
   deps = [
     ":install_headers",
     ":libnet-base",
+    ":libnet-base-test",
+    ":libnet-base-test_pc",
     ":libnet-base_pc",
   ]
   if (use.fuzzer) {
@@ -156,6 +158,47 @@ install_chromeos_headers("install_headers") {
   subdir = "net-base"
 }
 
+install_chromeos_headers("install_test_headers") {
+  sources = [
+    "mock_netlink_manager.h",
+    "mock_netlink_socket.h",
+    "mock_proc_fs_stub.h",
+    "mock_process_manager.h",
+    "mock_rtnl_handler.h",
+    "mock_socket.h",
+  ]
+  subdir = "net-base"
+}
+
+generate_pkg_config("libnet-base-test_pc") {
+  name = "libnet-base-test"
+  description = "net-base test library"
+  version = getenv("PV")
+  requires = [ "libchrome" ]
+  libs = [ "-lnet-base-test" ]
+  install = true
+}
+
+shared_library("libnet-base-test") {
+  sources = [
+    "mock_netlink_manager.cc",
+    "mock_netlink_socket.cc",
+    "mock_proc_fs_stub.cc",
+    "mock_process_manager.cc",
+    "mock_rtnl_handler.cc",
+    "mock_socket.cc",
+  ]
+  configs += [
+    "//common-mk:test",
+    ":target_defaults",
+  ]
+  install_path = "/build/lib"
+  deps = [
+    ":install_test_headers",
+    ":libnet-base",
+  ]
+}
+
 if (use.fuzzer) {
   executable("http_url_fuzzer") {
     sources = [ "http_url_fuzzer.cc" ]
@@ -232,9 +275,12 @@ if (use.test) {
     ]
     deps = [
       ":libnet-base",
-      ":net_base_test_support",
+      ":libnet-base-test",
       "//common-mk/testrunner",
     ]
-    pkg_deps = [ "libchrome-test" ]
+    pkg_deps = [
+      "libchrome-test",
+      "re2",
+    ]
   }
 }
