patchpanel: Use net-base headers in /usr/include/chromeos
So that we don't need net-base in CROS_WORKON_SUBTREE.

BUG=b:346465934
TEST=CQ

Change-Id: Ic4bf8c43897667efb5d46c31c6541e57c6467f50
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5623995
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Chih-Yu Huang <akahuang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -389,7 +389,7 @@ if (use.test) {
     deps = [
       ":libpatchpanel",
       "//common-mk/testrunner",
-      "//net-base:net_base_test_support",
     ]
+    pkg_deps = [ "libnet-base-test" ]
   }
 }
