patchpanel: Install iptables-restore scripts in BUILD.gn
BUG=None
TEST=CQ

Cq-Depend: chromium:5625050
Change-Id: I0ade9b892f9206d9cda81611be37602db22d16bd
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5625329
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Tested-by: Jie Jiang <jiejiang@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -17,6 +17,7 @@ group("all") {
     ":libpatchpanel-util",
     ":patchpaneld",
     "//patchpanel/bpf:patchpanel_ebpf",
+    "//patchpanel/iptables:install_iptables_start_scripts",
   ]
 
   if (use.fuzzer) {
