diagnostics: Add battery discharge V2 routine
Create a V2 version of the battery discharge routine.

The V1 interface is not updated yet, wait until test stabilization.

BUG=b:330460688
TEST=(shell) FEATURES=test P2_TEST_FILTER='*' emerge-octopus diagnostics
     (DUT) cros-health-tool diag battery_discharge_v2

Change-Id: I0ff811c0069e85066f21a81f7ea9f6b5ca4d04c3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5625330
Reviewed-by: Takashi Toyoshima <toyoshim@chromium.org>
Tested-by: Ethan Cheng <yycheng@google.com>
Commit-Queue: Ethan Cheng <yycheng@google.com>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/routines/battery_and_power/BUILD.gn
+++ b/diagnostics/cros_healthd/routines/battery_and_power/BUILD.gn
@@ -12,6 +12,7 @@ source_set("battery_and_power") {
     "battery_capacity.cc",
     "battery_charge.cc",
     "battery_discharge.cc",
+    "battery_discharge_v2.cc",
     "battery_health.cc",
   ]
   configs += [ ":battery_and_power_pkg_config" ]
@@ -30,6 +31,7 @@ if (use.test) {
       "battery_capacity_test.cc",
       "battery_charge_test.cc",
       "battery_discharge_test.cc",
+      "battery_discharge_v2_test.cc",
       "battery_health_test.cc",
     ]
     configs += [ ":battery_and_power_pkg_config" ]
