modemfwd: add props to tasks, publish on D-Bus
Also move Task implementation details to their own TU
because the class has a fair bit of code in it now.

BUG=b:315488486
TEST=unit tests, deploy to device, read D-Bus properties
  during flash

Change-Id: I23dfaa3d2d6f614ccade63b7d28a26ba608b05c7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5630237
Commit-Queue: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Ujjwal Pande <ujjwalpande@google.com>
Tested-by: Eric Caruso <ejcaruso@chromium.org>

--- a/modemfwd/BUILD.gn
+++ b/modemfwd/BUILD.gn
@@ -64,6 +64,7 @@ generate_dbus_adaptors("modemfwd_adaptors") {
 
 static_library("libmodemfw") {
   sources = [
+    "daemon_task.cc",
     "dlc_manager.cc",
     "error.cc",
     "file_decompressor.cc",
@@ -127,6 +128,7 @@ install_config("install_minijail_config") {
 if (use.test) {
   executable("modemfw_test") {
     sources = [
+      "daemon_task_test.cc",
       "dlc_manager_test.cc",
       "error_test.cc",
       "file_decompressor_test.cc",
